--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,19 @@ spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
+logging.level.org.springframework.web.servlet.view.freemarker=DEBUG
+logging.level.freemarker=DEBUG
+
+
+spring.mail.host=smtp.freesmtpservers.com
+spring.mail.port=25
+spring.mail.username=test@wp.pl
+# spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+# spring.mail.properties.mail.smtp.starttls.enable=true
+# spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
 
 
