--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
 	implementation group: 'org.jsoup', name: 'jsoup', version: '1.18.1'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: '3.3.3'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.3.3'
 }
 
 tasks.named('test') {
