added recaptcha, smtp contact, content fields translations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=searchEngine
+spring.config.import=classpath:secret.properties
 
 
 
@@ -18,15 +19,12 @@ logging.level.org.springframework.web.servlet.view.freemarker=DEBUG
 logging.level.freemarker=DEBUG
 
 
-spring.mail.host=smtp.freesmtpservers.com
-spring.mail.port=25
-spring.mail.username=test@wp.pl
-# spring.mail.password=
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dominikch19@gmail.com
 spring.mail.properties.mail.smtp.auth=false
-# spring.mail.properties.mail.smtp.starttls.enable=true
-# spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
-
-
