--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,16 @@ spring.config.import=classpath:secret.properties
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/searchEngine?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/searchEngine?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/searchEngine?useSSL=false&serverTimezone=UTC
+spring.datasource.username=searchEngine
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 
@@ -28,3 +31,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
+
+
+paypal.mode=sandbox
+paypal.returnUrl=http://localhost:8080/success
+paypal.cancelUrl=http://localhost:8080/cancel
