--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,8 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
 logging.level.org.springframework.web.servlet.view.freemarker=DEBUG
 logging.level.freemarker=DEBUG
+spring.freemarker.cache=false
+
 
 
 spring.mail.host=smtp.gmail.com
@@ -36,3 +38,6 @@ spring.mail.properties.mail.smtp.writetimeout=10000
 paypal.mode=sandbox
 paypal.returnUrl=http://localhost:8080/success
 paypal.cancelUrl=http://localhost:8080/cancel
+
+
+logging.level.org.springframework.security=DEBUG
