--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,7 @@ paypal.cancelUrl=http://localhost:8080/cancel
 
 
 logging.level.org.springframework.security=DEBUG
+
+
+spring.web.resources.static-locations=classpath:/public
+spring.mvc.static-path-pattern=/public/**
